--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/nav_RecyclerView"
-        android:title="recyclerview" />
+        android:title="Recycler" />
 
     <item
         android:id="@+id/nav_TabLayout"
